# point-cloud-change-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
src/: README.md  __init__.py  change_detection.py  config.py  dataset.py  type.py
src/extract/: README.md  __init__.py  main.py
src/merge/: README.md  __init__.py  main.py  union_find.py
src/reconstruct/: README.md  __init__.py  constant.py  main.py
src/register/: README.md  __init__.py  main.py
src/segmentation/: README.md  __init__.py  helper.py  main.py  type.py
src/utils/: __init__.py  annotation.py  color.py  image.py  label.py  path.py  pcd.py
