[tool.poetry]
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
n
ame = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.

[tool.poetry.dependencies]ddddddddd
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
python = "^3.10"
torch = "^1.13.1"
opencv-contrib-python = "^4.8.0.74"
torchvision = "0.14.1"
open3d = "^0.17.0"
scikit-learn = "^1.3.0"
addict = "^2.4.0"
pandas = "^2.0.3"
tqdm = "^4.65.0"
seaborn = "^0.12.2"
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
Why did you want only sex with me
