Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.

Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.

Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.
Actually, you want me only for sex friend, you never really love me. when you told me "love me" you lie always.



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
